# kiran-qdbusxml2cpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  kiran-qdbusxml2cpp.cpp  qdbusxml2cpp-kiran.cpp
data/: KiranDBusGenerateConfig.cmake.in  KiranDBusGenerateMacros.cmake
